# gossip-network

./: .gitignore  Cargo.toml  KNOWN ISSUES.md  README.md  architecture.md  config.toml  orchestrator.sh  plan.md
certs/: ca.cert  minica-key.pem  minica.pem  node.cert  node.key
certs/localhost/: cert.pem  key.pem
docs/: README.md  known issues.md
frontend/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.svelte  main.ts  styles.css
frontend/src/components/: GraphView.svelte  Header.svelte  LogView.svelte
frontend/src/lib/: NetworkGraph.svelte  networkState.svelte.ts  networkStore.js  networkStore.svelte.js  networkStore.svelte.ts  types.js  types.ts  viewState.svelte.ts  viewStore.svelte.ts
src/: app.rs  config.rs  crypto.rs  domain.rs  error.rs  gossip.rs  lib.rs  main.rs  model.rs  p2p.rs  visualizer.rs
src/api/: mod.rs  protocol.rs  ws.rs
src/engine/: mod.rs  protocol.rs
src/transport/: connection.rs  mod.rs  tls.rs
tests/: component_tests.rs  integration_tests.rs
tests/common/: harness.rs  mod.rs
tests/component/: engine.rs  mod.rs
tests/integration/: adversarial.rs  mod.rs  network.rs  topology.rs
