[package]
name = "gossip-network"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gossip-network"
path = "src/main.rs"

[lib]
name = "gossip_network"
path = "src/lib.rs"


[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ed25519-dalek = "2.1"
rand = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

anyhow = "1.0"
bincode = "1.3"
log = "0.4"
quinn = "0.10"
rcgen = "0.12"
rustls = "0.22"
tokio = { version = "1", features = ["full"] }

env_logger = "0.11"

axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }

tokio-util = "0.7"

[dev-dependencies]
tempfile = "3.8"