[package]
name = "gossip-network"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gossip-network"
path = "src/main.rs"

[lib]
name = "gossip_network"
path = "src/lib.rs"

[dependencies]
# Async Runtime & Utilities
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0" # Used in bin for top-level error reporting

# Tracing (replaces log)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"

# P2P Networking (QUIC)
quinn = "0.10"
rustls = "0.21"
rcgen = "0.12"

# Web API
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
futures = "0.3"
tokio-tungstenite = "0.21"
figment = { version = "0.10", features = ["test-util"] }